--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,3 +4,11 @@ updates:
     directory: / # パッケージマニフェストの配置先ディレクトリ
     schedule: # バージョンアップのスケジュール
       interval: daily
+    ignore: # バージョンアップの除外設定
+      - dependency-name: actions/upload-artifact # 除外する依存関係名
+        versions:
+          - 4.3.0
+          - 4.3.1
+      - dependency-name: "actions/*" # アスタリスクは任意の文字列にマッチ
+        update-types:
+          - version-update:semver-major
